[gd_scene load_steps=3 format=3 uid="uid://gmlilr6niymv"]

[ext_resource type="Theme" uid="uid://pxkotyr76blb" path="res://default_theme.tres" id="1_unx03"]
[ext_resource type="Script" path="res://levels/components/level_ui.gd" id="2_qgjqb"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_unx03")
script = ExtResource("2_qgjqb")

[node name="LostUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LostUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -46.5
offset_right = 52.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LostUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Burnt Out..."

[node name="RetryButton" type="Button" parent="LostUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry
"

[node name="MainMenuButton" type="Button" parent="LostUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"
